# junior

./: README.md  pyproject.toml
junior/: tablepdf.py  time.py
junior.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pdf/: README.md  __init__.py
