[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junior"
version = "1.5"
authors = [
    { name = "Ahsanur Rahman Sayem", email = "business.juniormail@gmail.com" }
]

description = "A description of your package"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fpdf2",
    "sympy",
    "pytz",
    "datetime"
]

[tool.setuptools.packages]
find = {}